# hermes

./: .gitignore  README.md  main.py  pyproject.toml
docs/: bi-dashboard.md
docs/prompts/: Hermes_0_4_0_ThicknessResolver_Tabla_Conversion_Codex.docx  pipe_wall_thickness_reference_hermes_0_4_0.csv
docs/scrum/: definition_of_done.md  product_backlog.md  sprint_1.md
scripts/: export_material_categorization.py  export_reconciliation_debug_report.py
src/: hermes_app.py
src/hermes/: __init__.py  __main__.py  application.py  config.py
src/hermes/domain/: __init__.py  materials.py  models.py  reconciliation.py
src/hermes/resources/: __init__.py
src/hermes/services/: __init__.py  bi_summary.py  column_mapping.py  excel_reader.py  material_parser.py  reconciliation.py  setup_validator.py
src/hermes/services/material_parsing/: __init__.py  locator.py  normalizer.py  thickness_resolver.py  universal.py
src/hermes/services/material_parsing/extractors/: __init__.py  base.py  common.py  elbows.py  flanges.py  gaskets.py  pipes.py  studs.py
src/hermes/ui/: __init__.py  dataframe_model.py  main_window.py  reconciliation_dashboard.py  source_panel.py
tests/: test_bi_summary.py  test_column_mapping.py  test_dataframe_model.py  test_excel_reader.py  test_material_parser.py  test_reconciliation.py  test_setup_validator.py  test_ui_smoke.py
